Updated project images to object-cover

--- a/index.html
+++ b/index.html
@@ -645,15 +645,15 @@
                                     <div class="swiper-wrapper">
                                         <!-- Add your images inside swiper slides -->
                                         <div class="swiper-slide"><img src="assets/r1.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/r2.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/r3.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/r4.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/r5.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                     </div>
                                     <!-- Navigation Buttons -->
                                     <!-- <div class="swiper-button-next"></div>
@@ -715,11 +715,11 @@
                                     <div class="swiper-wrapper">
                                         <!-- Add your images inside swiper slides -->
                                         <div class="swiper-slide"><img src="assets/l1.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/l2.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/l3.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                     </div>
                                     <!-- Navigation Buttons -->
                                     <!-- <div class="swiper-button-next"></div>
@@ -779,13 +779,13 @@
                                     <div class="swiper-wrapper">
                                         <!-- Add your images inside swiper slides -->
                                         <div class="swiper-slide"><img src="assets/m1.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/m2.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/m3.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                         <div class="swiper-slide"><img src="assets/m4.png" alt="Project Screenshot"
-                                                class="w-full h-48 object-contain"></div>
+                                                class="w-full h-48 object-cover"></div>
                                     </div>
                                     <!-- Navigation Buttons -->
                                     <!-- <div class="swiper-button-next"></div>
