--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <section id="about" class="min-h-screen py-18 bg-neutral-700 dark:bg-neutral-800  pt-20">
             <div class="container mx-auto px-6">
                 <div class="flex flex-col items-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-2 text-neutral-800 dark:text-white">About Me</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white dark:text-white">About Me</h2>
                     <div class="w-30 h-1 bg-primary-600 mb-6"></div>
                     <p class="text-center text-white dark:text-neutral-300 max-w-2xl">
                         Here's a brief introduction about who I am and what I do
