--- a/index.html
+++ b/index.html
@@ -620,13 +620,13 @@
     </div>
 
     <div id="root">
-        <section id="projects" class="min-h-screen py-18 bg-neutral-100 dark:bg-neutral-800">
+        <section id="projects" class="min-h-screen py-18 bg-neutral-700 dark:bg-neutral-800">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 items-center">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-2 text-neutral-800 dark:text-white">My Projects
+                    <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white dark:text-white">My Projects
                     </h2>
                     <div class="w-24 h-1 bg-primary-600 mx-auto mb-6"></div>
-                    <p class="text-lg text-gray-300 max-w-3xl mx-auto animate__animated animate__fadeIn mb-6">
+                    <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn mb-6">
                         Here are some of my recent projects that showcase my technical skills and problem-solving
                         abilities
                     </p>
@@ -664,7 +664,7 @@
                             </div>
                             <div class="p-6 bg-primary-900">
                                 <div class="flex justify-between items-center mb-3 ">
-                                    <h3 class="text-xl font-bold text-neutral-800 dark:text-white">Food Menu
+                                    <h3 class="text-xl font-bold text-white">Food Menu
                                         Online </h3>
                                     <span
                                         class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-700 dark:text-neutral-300">Web
