--- a/index.html
+++ b/index.html
@@ -666,8 +666,7 @@
                                 <div class="flex justify-between items-center mb-3 ">
                                     <h3 class="text-xl font-bold text-white">Food Menu
                                         Online </h3>
-                                    <span
-                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-700 dark:text-neutral-300">Web
+                                    <span class="text-xs bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Web
                                         Dev</span>
                                 </div>
                                 <p class="text-neutral-600 dark:text-neutral-400 mb-4 h-20">
