Updated project dark theme white about span

--- a/index.html
+++ b/index.html
@@ -730,10 +730,10 @@
                             </div>
                             <div class="p-6 bg-primary-900 ">
                                 <div class="flex justify-between items-center mb-3 ">
-                                    <h3 class="text-xl font-bold text-neutral-800 dark:text-white">Laundry Service
+                                    <h3 class="text-xl font-bold text-white">Laundry Service
                                     </h3>
                                     <span
-                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-700 dark:text-neutral-300">Mobile</span>
+                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Mobile</span>
                                 </div>
                                 <p class="text-neutral-600 dark:text-neutral-400 mb-4 h-20 ">
                                     Focused on seamless user experience and secure authentication processes.
@@ -796,10 +796,10 @@
                             </div>
                             <div class="p-6 bg-primary-900">
                                 <div class="flex justify-between items-center mb-3 ">
-                                    <h3 class="text-xl font-bold text-neutral-800 dark:text-white">Movie
+                                    <h3 class="text-xl font-bold text-white">Movie
                                         Recommendation </h3>
                                     <span
-                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-700 dark:text-neutral-300">Web
+                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Web
                                         Dev</span>
                                 </div>
                                 <p class="text-neutral-600 dark:text-neutral-400 mb-4 h-20">
