Updated project dark theme white contact

--- a/index.html
+++ b/index.html
@@ -906,12 +906,12 @@
     </div>
 
     <div id="root">
-        <section id="contact" class="min-h-screen py-18 bg-neutral-100 dark:bg-neutral-800  pt-20">
+        <section id="contact" class="min-h-screen py-18 bg-neutral-700 dark:bg-neutral-800  pt-20">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-2 text-neutral-800 dark:text-white">Contact</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white">Contact</h2>
                     <div class="w-24 h-1 bg-primary-600 mx-auto mb-6"></div>
-                    <p class="text-lg text-gray-300 max-w-3xl mx-auto animate__animated animate__fadeIn">Feel free to
+                    <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn">Feel free to
                         reach out for collaborations or just a friendly hello</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
