--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                                     <h3 class="text-xl font-bold text-white">Laundry Service
                                     </h3>
                                     <span
-                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Mobile</span>
+                                        class="text-xs bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Mobile</span>
                                 </div>
                                 <p class="text-neutral-600 dark:text-neutral-400 mb-4 h-20 ">
                                     Focused on seamless user experience and secure authentication processes.
@@ -798,8 +798,7 @@
                                 <div class="flex justify-between items-center mb-3 ">
                                     <h3 class="text-xl font-bold text-white">Movie
                                         Recommendation </h3>
-                                    <span
-                                        class="text-xs bg-neutral-200 dark:bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Web
+                                    <span class="text-xs bg-neutral-700 px-2 py-1 rounded-md text-neutral-300">Web
                                         Dev</span>
                                 </div>
                                 <p class="text-neutral-600 dark:text-neutral-400 mb-4 h-20">
