--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <div class="animate__animated animate__fadeInLeft ">
-                        <div class="bg-white dark:bg-neutral-700 rounded-lg p-6 shadow-lg mb-8 ">
+                        <div class="bg-primary-900 dark:bg-neutral-700 rounded-lg p-6 shadow-lg mb-8 ">
                             <div class="space-y-4 ">
                                 <div class="flex items-start">
                                     <div class="flex-shrink-0 bg-primary-100 dark:bg-primary-900 p-3 rounded-full">
