Updated project dark theme white contact profile

--- a/index.html
+++ b/index.html
@@ -927,8 +927,8 @@
                                         </svg>
                                     </div>
                                     <div class="ml-4">
-                                        <h4 class="text-lg font-medium text-neutral-800 dark:text-white">Phone</h4>
-                                        <p class="text-neutral-600 dark:text-neutral-300">(+91) 7259653326</p>
+                                        <h4 class="text-lg font-medium text-white dark:text-white">Phone</h4>
+                                        <p class="text-white dark:text-neutral-300">(+91) 7259653326</p>
                                     </div>
                                 </div>
 
@@ -942,8 +942,8 @@
                                         </svg>
                                     </div>
                                     <div class="ml-4">
-                                        <h4 class="text-lg font-medium text-neutral-800 dark:text-white">Email</h4>
-                                        <p class="text-neutral-600 dark:text-neutral-300">renukaganga9@gmail.com</p>
+                                        <h4 class="text-lg font-medium text-white dark:text-white">Email</h4>
+                                        <p class="text-white dark:text-neutral-300">renukaganga9@gmail.com</p>
                                     </div>
                                 </div>
 
@@ -959,8 +959,8 @@
                                         </svg>
                                     </div>
                                     <div class="ml-4">
-                                        <h4 class="text-lg font-medium text-neutral-800 dark:text-white">Location</h4>
-                                        <p class="text-neutral-600 dark:text-neutral-300">Udupi Karnataka, India</p>
+                                        <h4 class="text-lg font-medium text-white dark:text-white">Location</h4>
+                                        <p class="text-white dark:text-neutral-300">Udupi Karnataka, India</p>
                                     </div>
                                 </div>
                             </div>
