Updated project dark theme skill update

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <div class="space-y-6">
                             <!-- Frontend -->
                             <div>
-                                <h4 class="text-lg font-medium mb-3 text-neutral-700 dark:text-neutral-200">Frontend
+                                <h4 class="text-lg font-medium mb-3 text-white dark:text-neutral-200">Frontend
                                     Development
                                 </h4>
                                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
@@ -489,7 +489,7 @@
                     <div class="animate__animated animate__fadeInRight">
                         <!-- Backend -->
                         <div>
-                            <h4 class="text-lg font-medium mb-2 text-neutral-700 dark:text-neutral-200">Backend
+                            <h4 class="text-lg font-medium mb-2 text-white dark:text-neutral-200">Backend
                                 & DataBase
                             </h4>
                             <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
