--- a/index.html
+++ b/index.html
@@ -419,67 +419,66 @@
                             <!-- Frontend -->
                             <div>
                                 <h4 class="text-lg font-medium mb-3 text-white dark:text-neutral-200">Frontend
-                                    Development
                                 </h4>
                                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                                     <div class="skill-card">
                                         <div
-                                            class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                            class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                             <div
-                                                class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                                <span class="text-primary-700 dark:text-primary-300 font-bold">H</span>
+                                                class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <span class="text-primary-300 font-bold">H</span>
                                             </div>
-                                            <span class="text-neutral-700 dark:text-neutral-200">HTML5</span>
+                                            <span class="text-neutral-200">HTML5</span>
                                         </div>
                                     </div>
                                     <div class="skill-card">
                                         <div
-                                            class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                            class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                             <div
-                                                class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                                <span class="text-primary-700 dark:text-primary-300 font-bold">C</span>
+                                                class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <span class="text-primary-300 font-bold">C</span>
                                             </div>
-                                            <span class="text-neutral-700 dark:text-neutral-200">CSS3</span>
+                                            <span class="text-neutral-200">CSS3</span>
                                         </div>
                                     </div>
                                     <div class="skill-card">
                                         <div
-                                            class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                            class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                             <div
-                                                class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                                <span class="text-primary-700 dark:text-primary-300 font-bold">JS</span>
+                                                class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <span class="text-primary-300 font-bold">JS</span>
                                             </div>
-                                            <span class="text-neutral-700 dark:text-neutral-200">JavaScript</span>
+                                            <span class="text-neutral-200">JavaScript</span>
                                         </div>
                                     </div>
                                     <div class="skill-card">
                                         <div
-                                            class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                            class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                             <div
-                                                class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                                <span class="text-primary-700 dark:text-primary-300 font-bold">R</span>
+                                                class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <span class="text-primary-300 font-bold">R</span>
                                             </div>
-                                            <span class="text-neutral-700 dark:text-neutral-200">React JS</span>
+                                            <span class="text-neutral-200">React JS</span>
                                         </div>
                                     </div>
                                     <div class="skill-card">
                                         <div
-                                            class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                            class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                             <div
-                                                class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                                <span class="text-primary-700 dark:text-primary-300 font-bold">R</span>
+                                                class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <span class="text-primary-300 font-bold">R</span>
                                             </div>
-                                            <span class="text-neutral-700 dark:text-neutral-200">React-Native</span>
+                                            <span class="text-neutral-200">React-Native</span>
                                         </div>
                                     </div>
                                     <div class="skill-card">
                                         <div
-                                            class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                            class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                             <div
-                                                class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                                <span class="text-primary-700 dark:text-primary-300 font-bold">TW</span>
+                                                class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                                <span class="text-primary-300 font-bold">TW</span>
                                             </div>
-                                            <span class="text-neutral-700 dark:text-neutral-200">Tailwind</span>
+                                            <span class="text-neutral-200">Tailwind</span>
                                         </div>
                                     </div>
                                 </div>
@@ -490,7 +489,7 @@
                         <!-- Backend -->
                         <div>
                             <h4 class="text-lg font-medium mb-2 text-white dark:text-neutral-200">Backend
-                                & DataBase
+
                             </h4>
                             <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                                 <div class="skill-card">
