Updated project dark theme skill update back

--- a/index.html
+++ b/index.html
@@ -494,63 +494,63 @@
                             <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                                 <div class="skill-card">
                                     <div
-                                        class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class=":bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
-                                            class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                            <span class="text-primary-700 dark:text-primary-300 font-bold">P</span>
+                                            class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                            <span class="text-primary-300 font-bold">P</span>
                                         </div>
-                                        <span class="text-neutral-700 dark:text-neutral-200">PHP</span>
+                                        <span class="text-neutral-200">PHP</span>
                                     </div>
                                 </div>
                                 <div class="skill-card">
                                     <div
-                                        class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
-                                            class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                            <span class="text-primary-700 dark:text-primary-300 font-bold">N</span>
+                                            class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                            <span class="text-primary-300 font-bold">N</span>
                                         </div>
-                                        <span class="text-neutral-700 dark:text-neutral-200">Node.js</span>
+                                        <span class="text-neutral-200">Node.js</span>
                                     </div>
                                 </div>
 
                                 <div class="skill-card">
                                     <div
-                                        class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
-                                            class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                            <span class="text-primary-700 dark:text-primary-300 font-bold">SQL</span>
+                                            class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                            <span class="text-primary-300 font-bold">SQL</span>
                                         </div>
-                                        <span class="text-neutral-700 dark:text-neutral-200">MySQL</span>
+                                        <span class="text-neutral-200">MySQL</span>
                                     </div>
                                 </div>
                                 <div class="skill-card">
                                     <div
-                                        class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
-                                            class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                            <span class="text-primary-700 dark:text-primary-300 font-bold">Py</span>
+                                            class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                            <span class="text-primary-300 font-bold">Py</span>
                                         </div>
-                                        <span class="text-neutral-700 dark:text-neutral-200">Python</span>
+                                        <span class="text-neutral-200">Python</span>
                                     </div>
                                 </div>
                                 <div class="skill-card">
                                     <div
-                                        class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
-                                            class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                            <span class="text-primary-700 dark:text-primary-300 font-bold">API</span>
+                                            class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                            <span class="text-primary-300 font-bold">API</span>
                                         </div>
-                                        <span class="text-neutral-700 dark:text-neutral-200">REST API</span>
+                                        <span class="text-neutral-200">REST API</span>
                                     </div>
                                 </div>
                                 <div class="skill-card">
                                     <div
-                                        class="bg-white dark:bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
-                                            class="w-10 h-10 rounded-full bg-primary-100 dark:bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
-                                            <span class="text-primary-700 dark:text-primary-300 font-bold">SS</span>
+                                            class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
+                                            <span class="text-primary-300 font-bold">SS</span>
                                         </div>
-                                        <span class="text-neutral-700 dark:text-neutral-200">SQL Server</span>
+                                        <span class="text-neutral-200">SQL Server</span>
                                     </div>
                                 </div>
                             </div>
