Updated project dark theme skill update back

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                             <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                                 <div class="skill-card">
                                     <div
-                                        class=":bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
+                                        class="bg-neutral-700 p-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 flex items-center">
                                         <div
                                             class="w-10 h-10 rounded-full bg-primary-900 flex items-center justify-center mr-3 flex-shrink-0">
                                             <span class="text-primary-300 font-bold">P</span>
