--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col lg:flex-row items-center justify-between">
 
-                    <div class="md:w-1/2 flex justify-center animate__animated animate__fadeInRight mr-10">
+                    <div class="md:w-1/2 flex justify-center animate__animated animate__fadeInRight mr-10 mt-6">
                         <div class="relative">
                             <div
                                 class="absolute -inset-1 rounded-full bg-gradient-to-r from-primary-600 to-accent-500 opacity-70 blur-lg">
