Updated project dark theme home mb

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col lg:flex-row items-center justify-between">
 
-                    <div class="md:w-1/2 flex justify-center animate__animated animate__fadeInRight mr-10 mt-6">
+                    <div class="md:w-1/2 flex justify-center animate__animated animate__fadeInRight">
                         <div class="relative">
                             <div
                                 class="absolute -inset-1 rounded-full bg-gradient-to-r from-primary-600 to-accent-500 opacity-70 blur-lg">
@@ -307,7 +307,7 @@
                         </div>
                     </div>
                     <div class="lg:w-1/2 mb-10 lg:mb-0 animate__animated animate__fadeInLeft">
-                        <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4">
+                        <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mt-6 mb-4">
                             <span class="block text-white text-2xl">Hii, I'm</span>
                             <span class="text-[#3498DB] block mt-2 ">Renuka</span>
                         </h1>
