Updated project about grid

--- a/index.html
+++ b/index.html
@@ -360,20 +360,26 @@
                                 </div> -->
                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-8 mt-4">
                                     <div>
-                                        <h4 class="text-[#3498DB] font-semibold mb-1">Email</h4>
-                                        <p class="text-gray-300">renukaganga9@.com</p>
-                                    </div>
-                                    <div>
-                                        <h4 class="text-[#3498DB] font-semibold mb-2">Phone</h4>
-                                        <p class="text-gray-300">(+91) 7259653326</p>
-                                    </div>
-                                    <div>
-                                        <h4 class="text-[#3498DB] font-semibold mb-2">Education</h4>
+                                        <h4 class="text-[#3498DB] font-semibold mb-1">Education</h4>
                                         <p class="text-gray-300">M.S. Computer Science (CGPA:8.75)</p>
                                     </div>
                                     <div>
-                                        <h4 class="text-[#3498DB] font-semibold mb-2">Address</h4>
-                                        <p class="text-gray-300">Udupi, India</p>
+                                        <h4 class="text-[#3498DB] font-semibold mb-2">Passions & Interests</h4>
+                                        <p class="text-gray-300">Languages, Music,
+                                            Drawing, UI/UX, Animation, App Development.</p>
+
+
+                                    </div>
+                                    <div>
+                                        <h4 class="text-[#3498DB] font-semibold mb-2">Currently Working On</h4>
+                                        <p class="text-gray-300">Working on developing a fitness app with an animated AI
+                                            coach and other function.</p>
+                                    </div>
+                                    <div>
+                                        <h4 class="text-[#3498DB] font-semibold mb-2">Certifications</h4>
+                                        <p class="text-gray-300">Python Certifications</p>
+                                        <p class="text-gray-300">Angular7 for Beginners</p>
+                                        <p class="text-gray-300">Loading...</p>
                                     </div>
                                 </div>
                             </div>
