Updated project about para

--- a/index.html
+++ b/index.html
@@ -389,19 +389,23 @@
                     </div>
                     <div class="lg:w-1/2 animate__animated animate__fadeInRight">
                         <h3 class="text-2xl font-bold text-[#3498DB]  mb-4">Who I Am</h3>
-                        <p class="text-white mb-3 leading-relaxed">
-                            Hey there! 👋 I'm a dedicated <strong class="text-[#3498DB]">React Native</strong> Developer
-                            with a strong passion
-                            for building
-                            clean, functional, and user-friendly applications. I have internship experience and actively
-                            work on small daily projects to refine my skills and stay updated with the latest trends in
-                            mobile development.
+                        <p class="text-white mb-3 leading-relaxed text-justify">
+                            Hello! 👋 I'm a <strong class="text-[#3498DB]">React Native</strong> programmer who loves
+                            creating apps that are simple yet stylish,
+                            functional, and easy to use. I enjoy diving deep into my work, always eager to learn and
+                            improve.
+
+                            I might be a little slow when it comes to picking up new tech since I just have six months
+                            of internship experience, but in that time, I’ve learned a lot—especially by building an app
+                            from scratch.
+
+
                         </p>
-                        <p class="text-white mb-6 leading-relaxed">
-                            My expertise includes React Native, JavaScript,
-                            Context API,and I love
-                            exploring new technologies to enhance my development approach. I'm always eager to take on
-                            challenges and improve with each project I build</p>
+                        <p class="text-white mb-6 leading-relaxed text-justify">
+                            When it comes to technical strengths, I’d say I’m at an intermediate level in React Native,
+                            Context API, JavaScript, and a few other technologies. However, I feel my skills aren’t
+                            quite where I want them to be. Still, I’m a quick learner, and with proper guidance, I pick
+                            things up fast. Every project I work on helps me grow, improve, and push my limits.</p>
                     </div>
                 </div>
             </div>
