Updated project project para

--- a/index.html
+++ b/index.html
@@ -636,8 +636,8 @@
                     </h2>
                     <div class="w-24 h-1 bg-primary-600 mx-auto mb-6"></div>
                     <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn mb-6">
-                        "Here are some of my recent projects that improved my technical skills and enhance my
-                        problem-solving abilities"
+                        Here are some of my recent projects that improved my technical skills and enhance my
+                        problem-solving abilities
                     </p>
                 </div>
 
