--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@
                 <div class="text-center mb-7">
                     <h2 class="text-4xl font-bold mb-4 animate__animated animate__fadeIn">My Skills</h2>
                     <div class="w-24 h-1 bg-[#3498DB] mx-auto mb-6"></div>
-                    <p class="text-lg text-gray-300 max-w-md mx-auto animate__animated animate__fadeIn">Here are the
+                    <!-- <p class="text-lg text-gray-300 max-w-md mx-auto animate__animated animate__fadeIn">Here are the
                         technologies and tools I'm proficient with
-                    </p>
+                    </p> -->
                 </div>
                 <div class="grid grid-cols-1  lg:grid-cols-2 gap-10">
                     <div class="animate__animated animate__fadeInLeft">
