Updated project experience up

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                     <div class="w-24 h-1 bg-primary-600 mx-auto mb-6"></div>
                     <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn mb-6">
                         Here are some of my recent projects that improved my technical skills and enhance my
-                        problem-solving abilities
+                        problem-solving abilities.
                     </p>
                 </div>
 
@@ -863,8 +863,8 @@
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-bold mb-4 animate__animated animate__fadeIn">Work Experience</h2>
                     <div class="w-24 h-1 bg-[#3498DB] mx-auto mb-6"></div>
-                    <p class="text-lg text-gray-300 max-w-3xl mx-auto animate__animated animate__fadeIn">My professional
-                        journey and the companies I've had the privilege to work with throughout my career.</p>
+                    <p class="text-lg text-gray-300 max-w-3xl mx-auto animate__animated animate__fadeIn">My internship
+                        experience, which helped shape my skills and learning.</p>
                 </div>
                 <div class="bg-neutral-800 p-4 rounded-lg shadow-lg flex flex-col md:flex-row">
                     <!-- Left: Job Details -->
