--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
                 <div class="flex flex-col items-center mb-12">
                     <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white dark:text-white">About Me</h2>
                     <div class="w-30 h-1 bg-primary-600 mb-6"></div>
-                    <p class="text-center text-white dark:text-neutral-300 max-w-2xl">
+                    <!-- <p class="text-center text-white dark:text-neutral-300 max-w-2xl">
                         Here's a brief introduction about who I am and what I do
-                    </p>
+                    </p> -->
                 </div>
                 <div class="flex flex-col lg:flex-row items-center gap-12">
                     <div class="lg:w-1/2 animate__animated animate__fadeInLeft">
