Updated project contact subtitle

--- a/index.html
+++ b/index.html
@@ -919,8 +919,8 @@
                 <div class="text-center mb-16">
                     <h2 class="text-3xl md:text-4xl font-bold mb-2 text-white">Contact</h2>
                     <div class="w-24 h-1 bg-primary-600 mx-auto mb-6"></div>
-                    <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn">Feel free to
-                        reach out for collaborations or just a friendly hello</p>
+                    <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn">I'm always open to
+                        exciting opportunities and meaningful conversations—let's connect!</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <div class="animate__animated animate__fadeInLeft ">
