Updated project assets to set avtar set in home page

--- a/index.html
+++ b/index.html
@@ -294,13 +294,14 @@
                                 class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-neutral-800 relative ">
 
                                 <div class="w-full h-full bg-neutral-800 flex items-center justify-center">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-32 w-32 text-neutral-600"
+                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-32 w-32 text-neutral-600"
                                         viewBox="0 0 20 20" fill="currentColor">
                                         <path fill-rule="evenodd"
                                             d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
                                             clip-rule="evenodd" />
-                                    </svg>
+                                    </svg> -->
                                     <!-- <img src="assets/renuka88.png" alt="Profile" class="w-32 h-32"> -->
+                                    <img src="assets/a5.png" alt="Profile" class="w-70 h-70">
 
                                 </div>
                             </div>
