Updated project contact alignhment

--- a/index.html
+++ b/index.html
@@ -923,8 +923,8 @@
                     <p class="text-lg text-white max-w-3xl mx-auto animate__animated animate__fadeIn">I'm always open to
                         exciting opportunities and meaningful conversations—let's connect!</p>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
-                    <div class="animate__animated animate__fadeInLeft ">
+                <div class="flex justify-center items-center ">
+                    <div class="animate__animated animate__fadeInLeft w-full max-w-lg ">
                         <div class="bg-primary-900 dark:bg-neutral-700 rounded-lg p-6 shadow-lg mb-8 ">
                             <div class="space-y-4 ">
                                 <div class="flex items-start">
